discourse/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discourse
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: discourse
    spec:
      containers:
      - image: bitnami/discourse:latest
        name: discourse
        resources:
          requests:
            memory: "50Mi"
            cpu: "0m"
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /bitnami/discourse
          name: discourse-discourse-data
      - image: bitnami/postgresql:latest
        name: postgresql
        resources:
          requests:
            memory: "150Mi"
            cpu: "0m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /bitnami/postgresql
          name: discourse-postgresql-data
      - image: bitnami/redis:latest
        name: redis
        resources:
          requests:
            memory: "50Mi"
            cpu: "0m"
        resources: {}
        volumeMounts:
        - mountPath: /bitnami/redis
          name: discourse-redis-data
      - image: bitnami/discourse:latest
        args:
        - nami
        - start
        - --foreground
        - discourse-sidekiq
        name: sidekiq
        resources:
          requests:
            memory: "50Mi"
            cpu: "0m"
        resources: {}
        volumeMounts:
        - mountPath: /bitnami/discourse-sidekiq
          name: discourse-sidekiq-data
      restartPolicy: Always
      volumes:
      - name: discourse-discourse-data
        persistentVolumeClaim:
          claimName: discourse-discourse-data
      - name: discourse-postgresql-data
        persistentVolumeClaim:
          claimName: discourse-postgresql-data
      - name: discourse-redis-data
        persistentVolumeClaim:
          claimName: discourse-redis-data
      - name: discourse-sidekiq-data
        persistentVolumeClaim:
          claimName: discourse-sidekiq-data
status: {}
