discourse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discourse
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: discourse
  type: ClusterIP
status:
  loadBalancer: {}
